# DMS_fastapi

./: .gitignore  .htaccess  check_counts.py  check_db.py  check_final.txt  check_out.txt  check_project.py  database.py  db_check.py  deploy_check.py  fastapi_routes.txt  fix_date.py  fix_db_schema.py  get_fastapi_routes.py  main.py  manage.py  migrate_templates.py  passenger_wsgi.py  pyproject.toml  requirements.txt  run_command.py  startup_log.txt  templating.py  test_mapping.py  test_queries.py  test_result.py  tmp_check_sessions.py
.agents/: project_knowledge.md  rules.md
.github/workflows/: dms_automation.yml
Nayab/: asgi.py  login.py  settings.py  signup.py  urls.py  wsgi.py
alembic/: env.py
alembic/versions/: 324e47216e0a_add_course_code_and_sync_schema.py  7b58ae4bf543_initial_migration.py  87b69b66e323_add_daily_attendance.py
app/: main.py
app/admin/: __init__.py  auth.py  base.py  core.py  finance.py  inventory.py  password_reset.py  people.py  system.py
app/api/: __init__.py  attendance_api.py  audit_api.py  auth_api.py  base_api.py  course_api.py  exams_api.py  export_api.py  facility_api.py  finance_api.py  finance_extra_api.py  global_api.py  guardian_api.py  inventory_api.py  notification_api.py  public_admission_api.py  schedule_api.py  staff_api.py  student_api.py
app/commands/: __init__.py  backfill_reg_ids.py  create_snapshot.py  generate_fees.py  send_reminders.py  update_overdue.py
app/core/: __init__.py  config.py  constants.py
app/db/: session.py
app/helper/: constants.py  context.py  exporting.py  helper.py  resources.py  tests.py
app/logic/: attendance.py  audit.py  auth.py  courses.py  donations.py  exams.py  facilities.py  finance.py  global_logic.py  groups.py  guardian.py  institution.py  inventory.py  notifications.py  payments.py  permissions.py  roles.py  schedule.py  sms.py  staff.py  students.py  utils.py
app/models/: __init__.py  announcement.py  attendance.py  audit.py  auth.py  backup.py  base.py  exam.py  finance.py  foundation.py  inventory.py  people.py  schedule.py
app/schemas/: base.py  forms.py
app/templates/: 403.html  404.html  500.html
app/utils/: __init__.py  context.py  exporting.py  helper.py  resources.py
dms/: adapters.py  admin.py  apps.py  asgi.py  backends.py  constants.py  context_processors.py  exporting.py  helper.py  resources.py  urls.py  wsgi.py
dms/forms/: __init__.py  institution_forms.py
dms/logic/: attendance.py  audit.py  auth.py  courses.py  exams.py  facilities.py  finance.py  global_logic.py  groups.py  guardian.py  institution.py  inventory.py  notifications.py  payments.py  permissions.py  roles.py  schedule.py  staff.py  students.py
dms/migrations/: 0001_initial.py  0002_alter_course_category_and_more.py  0003_remove_historicalinstitution_name_in_english_and_more.py  0004_historicalinstitution_is_default_and_more.py  0005_course_instructors_alter_expense_category_and_more.py  0006_expense_receipt_number_and_more.py  0007_rename_fields.py  0008_alter_staff_options_historicalparent_reg_id_and_more.py  0009_rename_phone_historicalparent_mobile_and_more.py  0010_remove_historicalstudent_roll_no_and_more.py  0011_alter_historicalparent_address_and_more.py  0012_remove_historicalparent_phone_secondary_and_more.py  0013_announcement_updated_at_assetissue_created_at_and_more.py  0014_alter_historicalparent_created_at_and_more.py  (+6 more)
logic/: staff_logic.py
models/: __init__.py  announcement.py  attendance.py  audit_model.py  backup.py  exam.py  finance.py  foundation.py  inventory.py  links.py  people.py  schedule.py
routers/: core.py  finance.py  institutions.py  staff.py  students.py
static/: .htaccess  manifest.json  offline.html  service-worker.js
temp_old_code/: attendance_views.py  donations.py  finance_views.py  staff_views.py
templates/: 403.html  404.html  base.html  change_password.html  forgot_password.html  index.html  login.html  no_institution_linked.html  password_reset_verify_otp.html  reset_password.html  signup.html  staff_advances_manage.html  test_advances.html  test_students.html
(+214 files in other folders)
