[project]
name = "dms"
version = "0.1.0"
description = "School Management System rewritten in FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
    "jinja2==3.1.5",
    "sqladmin==0.20.1",
    "alembic==1.14.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",
    "requests==2.32.5",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "tablib[csv,json,xlsx]==3.9.0",
    "mysqlclient==2.2.8",
    "whitenoise==6.11.0",
    "pillow==12.1.1",
    "python-slugify==8.0.4",
    "num2words==0.5.14",
    "appdirs==1.4.4",
    "inflection==0.5.1",
    "openpyxl>=3.1.5",
    "packaging==26.0",
    "tzdata==2025.3",
]
