[project]
name = "dms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.14.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "appdirs==1.4.4",
    "bcrypt==5.0.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "docopt==0.6.2",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.8",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.14.0",
    "fastar==0.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "inflection==0.5.1",
    "itsdangerous>=2.2.0",
    "jinja2==3.1.5",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mysqlclient==2.2.8",
    "num2words==0.5.14",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "passlib==1.7.4",
    "pillow==12.1.1",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.54.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sqladmin==0.20.1",
    "sqlalchemy==2.0.48",
    "sqlmodel==0.0.22",
    "starlette==0.45.3",
    "tablib==3.9.0",
    "text-unidecode==1.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.34.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "whitenoise==6.11.0",
    "wtforms==3.1.2",
    "a2wsgi==1.10.10",
]
